# hydrogen-i18n

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md  SECURITY.md
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/: FUNDING.yml
.github/workflows/: check-legacy-v2.yml  check.yml  legacy-v2.yml  main.yml  test-legacy-v2.yml  test.yml
benches/: metadata.rs
src/: i18n.rs  language.rs  lib.rs  metadata.rs  multilanguage.rs  utils.rs
src/builders/: mod.rs  sync.rs  tokio.rs
src/parsers/: mod.rs  serde.rs  simd.rs
tests/: language.rs  metadata.rs  sync.rs  tokio.rs
tests/data/: default.toml
tests/data/english/: default.toml  en-AU.toml  en-CA.toml  en-GB.toml  en-IN.toml  en-NZ.toml  en-US.toml  en-ZA.toml
tests/data/portuguese/: default.toml  pt-AO.toml  pt-BR.toml  pt-CV.toml  pt-GW.toml  pt-MZ.toml  pt-PT.toml  pt-ST.toml  pt-TL.toml
tests/data/spanish/: default.toml  es-AR.toml  es-CO.toml  es-CU.toml  es-DO.toml  es-EC.toml  es-ES.toml  es-GT.toml  es-MX.toml  es-PE.toml  es-VE.toml
tests/lang/: en.json  pt-br.link  pt.json
