[package]
name = "hydrogen-i18n"
version = "3.0.0"
authors = ["Nashira Deer <nashiradeer@gmail.com>"]
edition = "2021"
description = "Translation utilities for applications that need to deals with different languages."
repository = "https://github.com/nashiradeer/hydrogen-i18n"
documentation = "https://docs.rs/hydrogen-i18n"
readme = "README.md"
license = "MIT"
keywords = ["hydrogen", "i18n", "language", "l10n", "translation"]
categories = ["internationalization", "localization"]
rust-version = "1.78"

[features]
default = []
serenity = ["dep:serenity"]
tokio = ["dep:tokio", "async"]
simd = ["dep:simd-json"]
async = ["dep:async-recursion"]

[dependencies]
serde_json = "1.0.117"

[dependencies.serenity]
version = "0.12.2"
optional = true
default-features = false
features = ["builder"]

[dependencies.tokio]
version = "1.38.0"
optional = true
default-features = false
features = ["fs"]

[dependencies.simd-json]
version = "0.13.10"
optional = true
features = ["serde_impl"]

[dependencies.async-recursion]
version = "1.1.1"
optional = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
