[package]
name = "hydrogen-i18n"
version = "3.0.0"
authors = ["Nashira Deer <nashiradeer@gmail.com>"]
edition = "2021"
description = "In-memory language loader and manager for client and server-side applications."
repository = "https://github.com/nashiradeer/hydrogen-i18n"
documentation = "https://docs.rs/hydrogen-i18n"
readme = "README.md"
license = "MIT"
keywords = ["i18n", "language", "l10n", "translation", "internationalization"]
categories = ["internationalization", "localization"]
rust-version = "1.80"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
