[package]
name = "hydrogen-i18n"
version = "3.0.0"
authors = ["Nashira Deer <nashiradeer@gmail.com>"]
edition = "2021"
description = "In-memory language loader and manager for client and server-side applications."
repository = "https://github.com/nashiradeer/hydrogen-i18n"
documentation = "https://docs.rs/hydrogen-i18n"
readme = "README.md"
license = "MIT"
keywords = ["i18n", "language", "l10n", "translation", "internationalization"]
categories = ["internationalization", "localization"]
rust-version = "1.80"

[features]
tokio = ["dep:tokio"]
test-util = ["tokio/rt-multi-thread", "tokio/macros"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
toml = { version = "0.8.19", features = ["parse"] }
serde = { version = "1.0.208", features = ["derive"] }

[dependencies.tokio]
version = "1.39.3"
optional = true
default-features = false
features = ["fs"]